--- a/ui/package.json
+++ b/ui/package.json
@@ -22,7 +22,8 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sass": "^1.81.0",
-    "vanilla-framework": "^4.18.2"
+    "vanilla-framework": "^4.18.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
